--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@
                   </svg>
                 </label>
 
-                <label for="modal-contant-phone" class="modal-content-label"
-                  >Телефон
+                <label for="modal-contant-phone" class="modal-content-label">
+                  Телефон
                   <input
                     class="modal-content-input"
                     type="tel"
                     name="phone-number"
-                    id="modal-contant-phone" />
+                    id="modal-contant-phone"
+                  />
                   <svg class="modal-content-icon" width="18" height="18">
-                    <use href="./images/icons.svg#phone-black"></use></svg
-                ></label>
+                    <use href="./images/icons.svg#phone-black"></use>
+                  </svg>
+                </label>
 
                 <label for="modal-contant-email" class="modal-content-label"
                   >Почта
@@ -100,10 +102,12 @@
                     class="modal-content-input"
                     type="email"
                     name="email"
-                    id="modal-contant-email" />
+                    id="modal-contant-email"
+                  />
                   <svg class="modal-content-icon" width="18" height="18">
-                    <use href="./images/icons.svg#email-black"></use></svg
-                ></label>
+                    <use href="./images/icons.svg#email-black"></use>
+                  </svg>
+                </label>
 
                 <label for="modal-content-comment" class="modal-content-label"
                   >Комментарий
@@ -113,15 +117,16 @@
                     id="modal-content-comment"
                     rows="6"
                     placeholder="Введите текст"
-                  ></textarea>
+                  >
+                  </textarea>
                 </label>
 
-                <label class="modal-cheked-label"
-                  ><input class="checkbox" type="checkbox" />
+                <label class="modal-cheked-label">
+                  <input class="checkbox" type="checkbox" />
                   <span class="checkbox-icon"></span> Соглашаюсь с рассылкой и
                   принимаю
-                  <a class="checkbox-link" href="">Условия договора</a></label
-                >
+                  <a class="checkbox-link" href="">Условия договора</a>
+                </label>
                 <button class="modal-submit" type="submit">Отправить</button>
               </form>
               <button class="close-button" data-modal-close type="button">
@@ -678,7 +683,6 @@
                 Подписаться
                 <svg class="subscribe-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
-                  >
                 </svg>
               </button>
             </form>
