--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@
     </main>
 
     <!--Footer-->
-      <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-content">
           <div class="contacts">
@@ -289,12 +289,23 @@
           <div class="form-container">
             <form class="subscribe-form">
               <div class="subscribe-container">
-              <label class="subscribe-label" for="subsribe-email" class="subscribe-title">Подпишитесь на рассылку</label>
-              <input class="subscribe-input" type="email" name="email" required placeholder="E-mail" id="subsribe-email" />
+                <label class="subscribe-label" for="subsribe-email"
+                  >Подпишитесь на рассылку</label
+                >
+                <input
+                  class="subscribe-input"
+                  type="email"
+                  name="email"
+                  required
+                  placeholder="E-mail"
+                  id="subsribe-email"
+                />
               </div>
               <button class="subscribe-button" type="submit">
-                Подписаться <svg class="subscribe-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send">
+                Подписаться
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                  >
                 </svg>
               </button>
             </form>
