--- a/index.html
+++ b/index.html
@@ -70,39 +70,32 @@
                 <p class="modal-content-title">
                   Оставьте свои данные, мы вам перезвоним
                 </p>
-                <label for="modal-content-name" class="modal-content-label"
+                <label class="modal-content-label"
                   >Имя
-                  <input
-                    class="modal-content-input"
-                    type="text"
-                    name="name"
-                    id="modal-content-name"
-                  />
+                  <input class="modal-content-input" type="text" name="name" />
                   <svg class="modal-content-icon" width="18" height="18">
                     <use href="./images/icons.svg#person-black"></use>
                   </svg>
                 </label>
 
-                <label for="modal-contant-phone" class="modal-content-label">
+                <label class="modal-content-label">
                   Телефон
                   <input
                     class="modal-content-input"
                     type="tel"
                     name="phone-number"
-                    id="modal-contant-phone"
                   />
                   <svg class="modal-content-icon" width="18" height="18">
                     <use href="./images/icons.svg#phone-black"></use>
                   </svg>
                 </label>
 
-                <label for="modal-contant-email" class="modal-content-label"
+                <label class="modal-content-label"
                   >Почта
                   <input
                     class="modal-content-input"
                     type="email"
                     name="email"
-                    id="modal-contant-email"
                   />
                   <svg class="modal-content-icon" width="18" height="18">
                     <use href="./images/icons.svg#email-black"></use>
